log/build_2024-02-11_10-52-48/NIDS_PKG/stderr.log
/home/gmo-pop/.local/lib/python3.10/site-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/gmo-pop/Desktop/DistriLearn/install/NIDS_PKG/lib/python3.10/site-packages/NIDS_PKG/ap_unified_ids_node.py", line 151
    		print([True if result < 0.4 else False result for result in results.flatten().tolist() ])
    		                                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

